[package]
name = "outdated-bevy"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.12", default-features = false }
bevy_asset_loader = { version = "0.18.0", features = ["2d"] }
bevy_rapier2d = { version = "0.23", features = ["parallel"] }
leafwing-input-manager = { version = "0.11" }
